--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,18 +55,36 @@ dependencies {
     def room_version = "2.4.3"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
     // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:$room_version"
+
     // optional - RxJava2 support for Room
     implementation "androidx.room:room-rxjava2:$room_version"
+
     // optional - RxJava3 support for Room
     implementation "androidx.room:room-rxjava3:$room_version"
+
     // optional - Guava support for Room, including Optional and ListenableFuture
     implementation "androidx.room:room-guava:$room_version"
+
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
+    
     // optional - Paging 3 Integration
     implementation "androidx.room:room-paging:$room_version"
+
+    //JETPACK NAVIGATION
+    def nav_version = "2.5.3"
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+    // Testing Navigation
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
 
 }
